# visualmeshoptim

./: .gitignore  .polyscope.ini  Export_shell.py  MeshUtils.py  PollenShell.py  PollenSim.py  PollenSim.pyproj  PollenSim_polyscope.py  README.md  imgui.ini  pollen.npz  pyproject.toml
src/: .polyscope.ini  imgui.ini
src/visualmeshoptim/: __init__.py  geometry.py  mesh_io.py  optimizer.py  problem.py  utils.py  visualizer.py
src/visualmeshoptim/examples/: __init__.py  cloth_drape.py  example_cloth_drape.py  example_pollen.py  pollen_shell.py
tests/: test_optimizer.py  test_problem_base.py  test_visualizer.py
