[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "visualmeshoptim"
version = "0.1.0"
description = "Generic framework for mesh-based optimization with optional visualization."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "PollenFEA Contributors" }]
dependencies = [
    "numpy",
    "torch",
]

[project.optional-dependencies]
visual = ["polyscope>=1.3"]
io = ["trimesh>=3.9"]

[tool.setuptools.packages.find]
where = ["src"]
